<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="#A2ABDD"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"

        >

        <LinearLayout
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/IPTVhora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="5dp"
                android:text="@string/hora"

                android:textColor="@color/tv"
                android:textSize="@dimen/TVtamanio"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TVtipohora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|bottom"
                android:padding="5dp"
                android:text="@string/tipo_hora"
                android:textColor="@color/tv"
                android:textSize="@dimen/TVtamanio"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/IPTVtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:padding="5dp"
                android:text="@string/prov_tituloconferencia"
                android:textColor="@color/tv"
                android:textStyle="bold"
                android:textSize="@dimen/TVtamanio" />

            <TextView
                android:id="@+id/IPTVartista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/prov_nombreexpositor"
                android:textColor="@color/tv"
                android:textSize="@dimen/TVtamanio" />

            <TextView
                android:id="@+id/IPTVgenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="160dp"
                android:background="@drawable/shape_ipresentaciones"
                android:text="@string/prov_diseño"
                android:textColor="@color/white"
                android:textSize="12sp"  />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>