<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="4dp"
    android:layout_margin="15dp"
    tools:context=".ui.fragments.UbicationDetaiDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="10dp"

            android:src="@drawable/centrocultural"

            />

        <TextView
            android:id="@+id/tituloLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_titulo"
            android:textColor="@color/colorSecondaryVariant"
            android:textSize="45sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:background="@drawable/shape_marco"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/direLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion_titulo"
            android:textColor="#205B22"
            android:textSize="20sp"
            android:background="@drawable/shape_aro"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_local"
            android:drawablePadding="20dp"
            android:layout_margin="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryVariant"
            android:gravity="center_horizontal"


            />

        <TextView
            android:id="@+id/telefonoLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono_titulo"
            android:textColor="#205B22"
            android:textSize="20sp"
            android:background="@drawable/shape_aro"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_cell"
            android:drawablePadding="20dp"
            android:layout_margin="10dp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryVariant"
            />
        <TextView
            android:id="@+id/webLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wed_titulo"
            android:textColor="#205B22"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:background="@drawable/shape_aro"
            android:drawableStart="@drawable/ic_link"
            android:drawablePadding="20dp"

            />


    </LinearLayout>
</androidx.cardview.widget.CardView>