<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ScheduleDetaiDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/TBscheduledetaildialog"
            android:layout_width="match_parent"

            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@drawable/shape_parafo"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cnu"
                        android:background="@drawable/shape_parafo"
                        android:layout_margin="5dp"

                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.25"

                        android:background="@color/colorSecondary" />

                    <TextView
                        android:id="@+id/Tvscheduledetaildialig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:text="@string/cheduledetaildialig"
                        android:textColor="@color/white"
                        android:textSize="25sp"

                        android:textStyle="bold" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="4dp"

                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_parafo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TVtemScheduledetailog"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/temScheduledetailog"
                            android:textColor="@color/colorError"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"
                            />
                        <TextView
                            android:id="@+id/TVtemScheduledetailognombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Scheduledetailognombre"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="#E91E63"
                            android:gravity="center"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="5dp"
                            />
                        <TextView
                            android:id="@+id/TVtemScheduledetailogdesing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_ipresentaciones"
                            android:gravity="center"
                            android:text="@string/prov_diseño"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                        <TextView
                            android:id="@+id/TVtemScheduledetailogintro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:text="@string/introdi"
                            android:textColor="@color/colorOnBackground"
                            android:textSize="16sp"
                            android:layout_margin="30dp"
                            android:justificationMode="inter_word"
                            />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>